# UB_RAG

./: .gitignore  README.md  app.py  flowsettings.py
libs/DocProcessing/: .gitignore  MANIFEST.in  pyproject.toml
libs/DocProcessing/DocProcessing/: app.py  components.py  extension_protocol.py  main.py
libs/DocProcessing/DocProcessing/assets/: __init__.py  theme.py
libs/DocProcessing/DocProcessing/assets/md/: about.md  changelogs.md  usage.md
libs/DocProcessing/DocProcessing/db/: models.py
libs/DocProcessing/DocProcessing/embeddings/: db.py  manager.py  ui.py
libs/DocProcessing/DocProcessing/index/: base.py  manager.py  models.py  ui.py
libs/DocProcessing/DocProcessing/index/file/: base.py  exceptions.py  index.py  pipelines.py  ui.py
libs/DocProcessing/DocProcessing/llms/: db.py  manager.py  ui.py
libs/DocProcessing/DocProcessing/pages/: help.py  login.py  settings.py  setup.py
libs/DocProcessing/DocProcessing/pages/chat/: __init__.py  chat_panel.py  chat_suggestion.py  control.py  report.py
libs/DocProcessing/DocProcessing/pages/resources/: __init__.py  user.py
libs/DocProcessing/DocProcessing/reasoning/: base.py  react.py  rewoo.py  simple.py
libs/DocProcessing/DocProcessing/reasoning/prompt_optimization/: decompose_question.py  fewshot_rewrite_question.py  mindmap.py  rewrite_question.py  suggest_conversation_name.py  (+1 more)
libs/DocProcessing/DocProcessing/rerankings/: db.py  manager.py  ui.py
libs/DocProcessing/DocProcessing/utils/: lang.py  render.py
libs/DocProcessing/DocProcessing_tests/: test_qa.py
libs/DocProcessing/migrations/: env.py
(+137 files in other folders)
